feature/JS-1: - add first files

--- a/index.html
+++ b/index.html
@@ -2,32 +2,29 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>slider</title>
-    <link rel="stylesheet" href="./css/style.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>ProjectJS</title>
+	<link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <div class="container">
-        <div class="slider">
-            <div class="slider__line">
-                <img class="slider__img"  src="./img/bugatti.jpg" alt="">
-                <img class="slider__img"  src="./img/dodge.jpg" alt="">
-                <img class="slider__img"  src="./img/Ferrari.jpg" alt="">
-                <img class="slider__img"  src="./img/hammer.jpg" alt="">
-				<img class="slider__img"  src="./img/lamborghini.jpg" alt="">
-				<img class="slider__img"  src="./img/Maserati.jpg" alt="">
-            </div>
-        </div>
-        <button class="slider__prev">Prev</button>
-        <button class="slider__next">Next</button>
-  
-
-
-    </div>
+	<div class="container">
+		<div class="slider">
+			<div class="slider__line">
+				<img class="slider__img" src="./img/bugatti.jpg" alt="bugatti">
+				<img class="slider__img" src="./img/dodge.jpg" alt="dodge">
+				<img class="slider__img" src="./img/ferrari.jpg" alt="ferrari">
+				<img class="slider__img" src="./img/hammer.jpg" alt="hammer">
+				<img class="slider__img" src="./img/lamborghini.jpg" alt="lamborghini">
+				<img class="slider__img" src="./img/maserati.jpg" alt="maserati">
+			</div>
+		</div>
+		<button class="slider__prev">Prev</button>
+		<button class="slider__next">Next</button>
+	</div>
 	<script src="./js/slider.js"></script>
-    <script src="./js/weather.js"></script>
-    <script src="./js/calc.js"></script>
+	<script src="./js/weather.js"></script>
+	<script src="./js/calc.js"></script>
 </body>
 </html>
