feature/JS-2: - add first files

--- a/index.html
+++ b/index.html
@@ -23,8 +23,22 @@
 		<button class="slider__prev">Prev</button>
 		<button class="slider__next">Next</button>
 	</div>
+
+
+		<div class="wrapper">
+		<section class="input__part">
+			<p class="input__text"></p>
+			<div class="input__content">
+				<input type="text" spellcheck="false" placeholder="Enter city name" required>
+				<div class="separator"></div>
+				<button>Get Device Location</button>
+			</div>
+		</section>
+		<div id="weather" class="weather"></div>
+	</div>
 	<script src="./js/slider.js"></script>
 	<script src="./js/weather.js"></script>
 	<script src="./js/calc.js"></script>
 </body>
+
 </html>
