--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	</div>
 
 
-		<div class="wrapper">
+	<div class="wrapper">
 		<section class="input__part">
 			<p class="input__text"></p>
 			<div class="input__content">
@@ -35,10 +35,52 @@
 			</div>
 		</section>
 		<div id="weather" class="weather"></div>
+
+
+	</div>
+	<div class="wrapper__calc">
+		<header>Calculator</header>
+		<section class="input__calc">
+			<p class="input__calc"></p>
+			<div class="input__calc">
+				<form name="calculator">
+					<input class="calc" placeholder="Enter" value="" name="textview">
+				</form>
+				<div class="separator"></div>
+				<table>
+					<tr>
+						<td><input class="button" type="button" value="7" onclick="insert(value)"></td>
+						<td><input class="button" type="button" value="8" onclick="insert(value)"></td>
+						<td><input class="button" type="button" value="9" onclick="insert(value)"></td>
+						<td><input class="button" type="button" value="/" onclick="insert(value)"></td>
+					</tr>
+					<tr>
+						<td><input class="button" type="button" value="4" onclick="insert(value)"></td>
+						<td><input class="button" type="button" value="5" onclick="insert(value)"></td>
+						<td><input class="button" type="button" value="6" onclick="insert(value)"></td>
+						<td><input class="button" type="button" value="*" onclick="insert(value)"></td>
+					</tr>
+					<tr>
+						<td><input class="button" type="button" value="1" onclick="insert(value)"></td>
+						<td><input class="button" type="button" value="2" onclick="insert(value)"></td>
+						<td><input class="button" type="button" value="3" onclick="insert(value)"></td>
+						<td><input class="button" type="button" value="+" onclick="insert(value)"></td>
+					</tr>
+					<tr>
+						<td><input class="button" type="button" value="C" onclick="clean()"></td>
+						<td><input class="button" type="button" value="0" onclick="insert(value)"></td>
+						<td><input class="button" type="button" value="." onclick="point(value)"></td>
+						<td><input class="button" type="button" value="-" onclick="insert(value)"></td>
+					</tr>
+					<tr>
+						<td colspan="4"><input class="buttonequall" type="button" value="=" onclick="equally()"></td>
+					</tr>
+				</table>
+		</section>
 	</div>
 	<script src="./js/slider.js"></script>
 	<script src="./js/weather.js"></script>
-	<script src="./js/calc.js"></script>
+	<script src="./js/calculacor.js"></script>
 </body>
 
 </html>
