--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
 			<p class="input__calc"></p>
 			<div class="input__calc">
 				<form name="calculator">
-					<input class="calc" placeholder="Enter" value="" name="textview">
+					<input style="border: none;" value="" id="fakeInput" readonly">
+					<div class="form__calc">
+						<input class="calc" placeholder="Enter" value="" id="mainInput" name="textview">
+						<td><input class="backspace" type="button" value="<" onclick="deleteLastSymbol()"></td>
+					</div>
 				</form>
 				<div class="separator"></div>
 				<table>
@@ -74,6 +78,7 @@
 					</tr>
 					<tr>
 						<td colspan="4"><input class="buttonequall" type="button" value="=" onclick="equally()"></td>
+
 					</tr>
 				</table>
 		</section>
