feature/JS-3: - add first files

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					<tr>
 						<td><input class="button" type="button" value="C" onclick="clean()"></td>
 						<td><input class="button" type="button" value="0" onclick="insert(value)"></td>
-						<td><input class="button" type="button" value="." onclick="point(value)"></td>
+						<td><input class="button" type="button" value="." onclick="insert(value)"></td>
 						<td><input class="button" type="button" value="-" onclick="insert(value)"></td>
 					</tr>
 					<tr>
