Feature/JS-4: - add first files

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+	
 	<div class="container">
 		<header>Slider</header>
 		<div class="slider">
@@ -84,17 +85,15 @@
 				</table>
 		</section>
 	</div>
-
 	<div class="wrapper">
 		<header>Timer</header>
 		<div class="timer__menu">
 			<div class="timer__logo">
-				<img src="./img/construction_project_plan_building_architect_design_develop-57_icon-icons.com_60216.png"
-					alt="setting">
+				<img src="./img/alarmclockflat_106001.png" alt="time">
 			</div>
 			<div class="timer__links">
-				<button class="timer__link" onclick="start()">Timer</button>
-				<button class="timer__link" onclick="short()">Short break</button>
+				<button class="timer__timer">Timer</button>
+				<button class="timer__short">Short break</button>
 				<button class="timer__long">Long break</button>
 			</div>
 
@@ -102,18 +101,18 @@
 
 		<div class="timer__block">
 			<div class="inputs">
-			<input type="number" min="0" max="59" placeholder="min" class="min" />
-			<div class="time__time">:</div>
-			<input type="number" min="0" max="59" placeholder="sec" class="sec" />
-</div>
+				<input type="number" min="0" max="59" placeholder="min" class="min" />
+				<div class="time__time">:</div>
+				<input type="number" min="0" max="59" placeholder="sec" class="sec" />
+			</div>
 
 			<p class="result">00 : 00</p>
 		</div>
-		
+
 		<div class="timer__buttons">
 			<div class="timer__button_start">Start</div>
 			<div class="timer__button_pause">Pause</div>
-			<div class="timer__button_stop" >Stop</div>
+			<div class="timer__button_stop">Stop</div>
 		</div>
 	</div>
 
