Feature/JS-4: - add first files

--- a/index.html
+++ b/index.html
@@ -5,21 +5,19 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>ProjectJS</title>
-	<link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-
 	<div class="container">
 		<header>Slider</header>
 		<div class="slider">
 			<div class="slider__line">
-				<img class="slider__img" src="./img/bugatti.jpg" alt="bugatti">
-				<img class="slider__img" src="./img/dodge.jpg" alt="dodge">
-				<img class="slider__img" src="./img/ferrari.jpg" alt="ferrari">
-				<img class="slider__img" src="./img/hammer.jpg" alt="hammer">
-				<img class="slider__img" src="./img/lamborghini.jpg" alt="lamborghini">
-				<img class="slider__img" src="./img/maserati.jpg" alt="maserati">
+				<img class="slider__img" src="./src/img/bugatti.jpg" alt="bugatti">
+				<img class="slider__img" src="./src/img/dodge.jpg" alt="dodge">
+				<img class="slider__img" src="./src/img/Ferrari.jpg" alt="ferrari">
+				<img class="slider__img" src="./src/img/hammer.jpg" alt="hammer">
+				<img class="slider__img" src="./src/img/lamborghini.jpg" alt="lamborghini">
+				<img class="slider__img" src="./src/img/Maserati.jpg" alt="maserati">
 			</div>
 		</div>
 		<button class="slider__prev">Prev</button>
@@ -85,42 +83,34 @@
 				</table>
 		</section>
 	</div>
+	
 	<div class="wrapper">
 		<header>Timer</header>
 		<div class="timer__menu">
 			<div class="timer__logo">
-				<img src="./img/alarmclockflat_106001.png" alt="time">
+				<img src="./src/img/alarmclockflat_106001.png" alt="time">
 			</div>
 			<div class="timer__links">
 				<button class="timer__timer">Timer</button>
 				<button class="timer__short">Short break</button>
 				<button class="timer__long">Long break</button>
 			</div>
-
 		</div>
-
 		<div class="timer__block">
 			<div class="inputs">
 				<input type="number" min="0" max="59" placeholder="min" class="min" />
 				<div class="time__time">:</div>
 				<input type="number" min="0" max="59" placeholder="sec" class="sec" />
 			</div>
-
 			<p class="result">00 : 00</p>
 		</div>
-
 		<div class="timer__buttons">
 			<div class="timer__button_start">Start</div>
 			<div class="timer__button_pause">Pause</div>
 			<div class="timer__button_stop">Stop</div>
 		</div>
 	</div>
-
 	</div>
-	<script src="./js/slider.js"></script>
-	<script src="./js/weather.js"></script>
-	<script src="./js/calculacor.js"></script>
-	<script src="./js/timer.js"></script>
 </body>
 
 </html>
